# rules_symforce

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  requirements.in  requirements_lock.txt
examples/: BUILD.bazel  gen_simple.py  test_simple.cc
symforce_wrapper/: BUILD.bazel  generator.py  symforce_wrapper.bzl
